# Script

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  qtcreator.sh
Source/: .clang-format  .clang-tidy  CMakeLists.txt
Source/src/: CMakeLists.txt
Source/src/Framework/Script/: Basic.cpp  Basic.hpp  Engine.cpp  Engine.hpp  FunctionInvoker.hpp  Metatable.cpp  Metatable.hpp  Object.hpp  ObjectOwnership.hpp  Reference.cpp  Reference.hpp  Sandbox.cpp  Sandbox.hpp  TypeTraits.hpp  VariableType.hpp
Source/src/Framework/Script/Stack/: Stack.hpp  StackArguments.hpp  StackBasic.hpp  StackClass.hpp  StackContainer.hpp  StackFunction.hpp
Source/test/Unit/: CMakeLists.txt
Source/test/Unit/src/Framework/Script/: ScriptTester.cpp
